--- a/survey.html
+++ b/survey.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html><html><meta charset="UTF-8">
-<embed width="600" height="600" name="plugin" id="plugin" src="survey_results.pdf" type="application/pdf">
+<embed width="600" height="600" name="plugin" id="plugin" src="survey_analysis.pdf" type="application/pdf">
